<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/allTv"
            style="@style/recordFilterText"
            android:text="@string/record_all" />

        <TextView
            android:id="@+id/punishmentTv"
            style="@style/recordFilterText"
            android:layout_marginStart="8dp"
            android:text="@string/record_punishment" />

        <TextView
            android:id="@+id/complaintTv"
            style="@style/recordFilterText"
            android:layout_marginStart="8dp"
            android:text="@string/record_complaint" />
    </LinearLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/emptyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/record_empty"
                android:textColor="@color/color999"
                android:textSize="14sp"
                android:visibility="gone" />

            <com.chat.base.ui.components.CommonLoadingView
                android:id="@+id/loadingView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/homeColor"
            app:srlTextNothing="@string/refresh_footer" />
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</LinearLayout>
